--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
             @Html.ActionLink(  "Home", "Index", "Home")
         </li>
         <li>
-            @Html.ActionLink( "1", "Example1", "Home")
+            @Html.ActionLink( "Thoughts", "Example1", "Home")
         </li>
         <li>
-            @Html.ActionLink("2", "Example2", "Home")
+            @Html.ActionLink("Card Shuffle", "Example2", "Home")
         </li>
         <li>
             @Html.ActionLink("Kings", "Example3", "Home")
