Adjusted Structure of the site and names of samples

--- a/Test/Views/Home/Knockout3.cshtml
+++ b/Test/Views/Home/Knockout3.cshtml
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <script src="~/Scripts/example4.js"></script>
+    <title>Index</title>   
+    <script src="~/Scripts/knockout3.js"></script>
 </head>
 <body>
     <form data-bind="submit: getFlowers">
