--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -21,16 +21,16 @@
             @Html.ActionLink(  "Home", "Index", "Home")
         </li>
         <li>
-            @Html.ActionLink( "Thoughts", "Example1", "Home")
+            @Html.ActionLink("Thoughts", "Knockout1", "Home")
         </li>
         <li>
-            @Html.ActionLink("Card Shuffle", "Example2", "Home")
+            @Html.ActionLink("Card Shuffle", "ShuffleCards", "Home")
         </li>
         <li>
-            @Html.ActionLink("To Do", "Example3", "Home")
+            @Html.ActionLink("To Do", "Angular1", "Home")
         </li>
         <li>
-            @Html.ActionLink("Bach Flowers", "Example4", "Home")
+            @Html.ActionLink("Bach Flowers", "Knockout3", "Home")
         </li>
     </ul>
     <hr>
