--- a/Test/Views/Home/Knockout1.cshtml
+++ b/Test/Views/Home/Knockout1.cshtml
@@ -23,8 +23,8 @@
         <button data-bind="click: $parent.addNewthought">Add hought of the day</button>
         <button data-bind="click: $parent.updateAllthoughts">Update all changes</button>
     </div>
-
-    <script src="~/Scripts/example1_appviewmodel.js"></script>
+    <script src="~/Scripts/knockout1.js"></script>
+   
 </body>
 </html>
 
