--- a/Test/Views/Home/Knockout1.cshtml
+++ b/Test/Views/Home/Knockout1.cshtml
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>   
+    <title>Index</title> 
+    <link href="~/Css/knock_style.css" rel="stylesheet" />
     <script type='text/javascript'>
         $(document).ready(function () { });
     </script>
