--- a/Test/Views/Home/Knockout2.cshtml
+++ b/Test/Views/Home/Knockout2.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>   
-    <script src="~/Scripts/knockout3.js"></script>
+    <link href="~/Css/knock_style.css" rel="stylesheet" />
+    <script src="~/Scripts/knockout2.js"></script>
 </head>
 <body>
     <form data-bind="submit: getFlowers">
