Added animation support to newer version of angular.js

--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -26,8 +26,13 @@
             @Html.ActionLink("Card Shuffle", "ShuffleCards", "Home")
         </li>
         <li>
-            @Html.ActionLink("To Do", "Angular1", "Home")
+            @Html.ActionLink("Angular115", "Angular115", "Home")
         </li>
+
+        <li>
+            @Html.ActionLink("Angular129", "Angular129", "Home")
+        </li>
+
         <li>
             @Html.ActionLink("Bach Flowers", "Knockout2", "Home")
         </li>
