--- a/Test/Views/Home/Angular129.cshtml
+++ b/Test/Views/Home/Angular129.cshtml
@@ -1,13 +1,14 @@
-﻿@*@{Layout = null;}*@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <script src="~/solution_scripts/Angular-1.1.5/angular-1.1.5.js"></script>
-    <link href="~/solution_scripts/Angular-1.1.5/Animate-1.1.5angularVariant.css" rel="stylesheet" />
+    <script src="~/solution_scripts/Angular-1.2.9/all-angular/angular.js"></script>
+    <script src="~/solution_scripts/Angular-1.2.9/all-angular/angular-animate.js"></script>
+    <link href="~/solution_scripts/Angular-1.2.9/all-angular/animate.css" rel="stylesheet" />
+    <link href="~/solution_scripts/Angular-1.2.9/all-angular/page_style.css" rel="stylesheet" />
 </head>
-<body data-ng-app="moduleApp">
+<body  data-ng-app="moduleApp129">
     <div data-ng-controller="CustomerController">
         Name:<br />
         <input type="text" data-ng-model="inputData.name" placeholder="name" />
@@ -20,8 +21,8 @@
         <br />
         Name: <input type="text" ng-model="nametosearch" placeholder="Type something" />&nbsp;&nbsp; {{ nametosearch }}
         <button data-ng-click="getData()">Get Customers</button>
-        <ul>
-            <li ng-animate="'animate'" ng-repeat="cust in customers | filter:nametosearch |orderBy:'name'">
+        <ul class="customers">
+            <li ng-repeat="cust in customers | filter:nametosearch |orderBy:'name'">
                 <input type="text" name="input" ng-model="cust.name" />
                 <input type="text" name="input" ng-model="cust.city" />
                 <button data-ng-click="getInnerData(cust.name)">Get Name</button>
@@ -35,15 +36,11 @@
     <div data-ng-controller="OrderController">
         {{ codeName }}
     </div>
-
     <div data-ng-controller="DetailsController">
-
         {{ detailName }}
     </div>
-   
 
-    <script src="~/solution_scripts/Angular-1.1.5/appcore.js"></script>
-   
+    <script src="~/solution_scripts/Angular-1.2.9/all-angular/appcore.js"></script>
+
 </body>
 </html>
-
