Folder hierarchy changed to folders per library

--- a/Test/Views/Home/Knockout1.cshtml
+++ b/Test/Views/Home/Knockout1.cshtml
@@ -24,7 +24,8 @@
         <button data-bind="click: $parent.addNewthought">Add hought of the day</button>
         <button data-bind="click: $parent.updateAllthoughts">Update all changes</button>
     </div>
-    <script src="~/Scripts/knockout1.js"></script>
+
+    <script src="~/Scripts/Knockout/knockout1.js"></script>
    
 </body>
 </html>
