--- a/Test/Views/Home/Knockout2.cshtml
+++ b/Test/Views/Home/Knockout2.cshtml
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>   
     <link href="~/Css/knock_style.css" rel="stylesheet" />
-    <script src="~/Scripts/knockout2.js"></script>
+    <script src="~/Scripts/Knockout/knockout2.js"></script>
 </head>
 <body>
     <form data-bind="submit: getFlowers">
