--- a/Test/Views/Home/ShuffleCards.cshtml
+++ b/Test/Views/Home/ShuffleCards.cshtml
@@ -3,7 +3,7 @@
 <head>  
         <meta name="viewport" content="width=device-width" />
         <title>Shuffler</title>
-    <script src="~/Scripts/shuffler.js"></script>
+    <script src="~/solution_scripts/CardShuffler/shuffler.js"></script>
         <script type='text/javascript'>
             $(document).ready(function () { });
         </script>
