Added Bootstrap Navbar in  MAster Page

--- a/Test/Views/Home/Knockout2.cshtml
+++ b/Test/Views/Home/Knockout2.cshtml
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>   
-    <link href="~/Css/knock_style.css" rel="stylesheet" />
+    <title>Index</title>
+    <script src="~/Scripts/Knockout/knockout-3.1.0.js"></script> 
     <script src="~/Scripts/Knockout/knockout2.js"></script>
 </head>
 <body>
