--- a/Test/Views/Home/Knockout1.cshtml
+++ b/Test/Views/Home/Knockout1.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title> 
-    <link href="~/Css/knock_style.css" rel="stylesheet" />
+    <script src="~/Scripts/Knockout/knockout-3.1.0.js"></script>   
     <script type='text/javascript'>
         $(document).ready(function () { });
     </script>
