--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -1,49 +1,66 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+
+    <title>Generic Samples on Major javascript libraries and frameworks</title>
     <script src="~/Scripts/Jquery/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/Knockout/knockout-3.1.0.js"></script>  
-    <style>
-        #masterList > li {
-            list-style-type: none;
-            display: inline;
-        }
-    </style>
- </head>
-<body style="margin-left:100px;margin-right:100px">    
-    <ul id="masterList">      
-        <li>
-            @Html.ActionLink(  "Home", "Index", "Home")
-        </li>
-        <li>
-            @Html.ActionLink("Thoughts", "Knockout1", "Home")
-        </li>
-        <li>
-            @Html.ActionLink("Card Shuffle", "ShuffleCards", "Home")
-        </li>
-        <li>
-            @Html.ActionLink("Angular115", "Angular115", "Home")
-        </li>
-
-        <li>
-            @Html.ActionLink("Angular129", "Angular129", "Home")
-        </li>
-
-        <li>
-            @Html.ActionLink("Bach Flowers", "Knockout2", "Home")
-        </li>
-
-
-        <li>
-            @Html.ActionLink("Bootstrap", "Bootstrap", "Home")
-        </li>
-
-
-    </ul>
-    <hr>
-    @RenderBody()  
+    <script src="~/Scripts/bootstrap/js/bootstrap.js"></script>
+    <link href="~/Scripts/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Scripts/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
+    
+</head>
+<body style="margin-left:20px;margin-right:20px">
+    <nav class="navbar navbar-default " role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("Home", "Index", "Home",new { Class="navbar-brand" })            
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">                  
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Knockout Samples <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Thoughts", "Knockout1", "Home")</li>
+                            <li>@Html.ActionLink("Bach Flowers", "Knockout2", "Home")</li>                            
+                            <li class="divider"></li>
+                            <li><a href="#">To do</a></li>
+                        </ul>
+                    </li>
+                </ul>            
+                <ul class="nav navbar-nav">                  
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Angular samples <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Angular ver. 1.1.5", "Angular115", "Home")</li>
+                            <li>@Html.ActionLink("Angular ver. 1.2.9", "Angular129", "Home")</li>                          
+                            <li class="divider"></li>
+                            <li><a href="#">To do</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Javascript Samples<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("ICing Cards Shuffler", "ShuffleCards", "Home")</li>                          
+                            <li class="divider"></li>
+                            <li><a href="#">To do</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>   
+    @RenderBody()
 </body>
 </html>
+
+
